--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2672,107 +2672,107 @@ stories:
   domain: http://www.mtexpress.com/
   link: https://www.mtexpress.com/opinion/editorials/the-right-names-are-child-rape-and-sex-trafficking/article_7f73f02a-a40d-11e9-94c0-170ffd1f7ee6.html
 images:
-- name: server-cloud-server-racks-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-green-zuma.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
+- name: birdhouse-birdhouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dark-rain.jpg
+- name: blossombar-post-modern-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-24-99.jpg
+- name: downtown-trucksilo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-emily-carr.jpg
+- name: aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1-square.jpg
+- name: downtown-trucksilo-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purple-storm.jpg
+- name: old-house-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-matrix.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crabapple.jpg
+- name: abandonedbuildings_colorful_dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_dream.jpg
+- name: border-crossing-bordercrossing-green-zuma.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-green-zuma.png
+- name: oldcabin-store-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purp-paper.jpg
+- name: white-house-whitehouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-brush.jpg
+- name: mosaic-face-mosaic-face-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-rainbow-festival.jpg
+- name: lincoln-memorial-lincolnmemorial-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-monet-one.jpg
+- name: fence-mexico-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-diego-rivera1.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-3.jpg
+- name: supreme-court-supremecourt-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-far-away.jpg
+- name: yosemite-yosemite-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-creativity.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
+- name: old-gas-pumps-oldgaspumps-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-space-pizza.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+- name: supreme-court-supremecourt-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-dali.jpg
+- name: christianity-christianity-under-construction-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-neo-instinct.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
+- name: blossombar-gred-mash-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-24-99.jpg
+- name: downtown-trucksilo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-alien-goggles.jpg
+- name: lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
+- name: old-granary-field-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
+- name: oldhouse-oldhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-spagetti-accident.jpg
+- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
+- name: san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-propaganda-leaflets.jpg
+- name: old-church-oldchurch-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
+- name: gypsymosaic-gypsy-eyes-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-pablo-blue.jpg
+- name: oldhouse-oldhouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-cinnamon-rolls.jpg
+- name: crow_dark_pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
+- name: fence-mexico-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-graham-sutherland.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-pablo-blue.jpg
+- name: aws-s3-stories-shipping-energy-trucking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
+- name: old-barn-old-barn-1500-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-plentiful.jpg
 - name: curtain-curtain-marcel-duchamp.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-marcel-duchamp.jpg
-- name: oldtrain-oldtrain-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-blue-circuit.jpg
-- name: gypsymosaic-gypsy-eyes-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dark-rain.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
-- name: server-cloud-server-racks-door-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-5.jpg
-- name: gypsymosaic-gypsy-eyes-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
-- name: rain-princess-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7831.jpg
-- name: white-house-lawn-white-house-window-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alberto-giacometti.jpg
-- name: lincoln-memorial-lincolnmemorial-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-brush.jpg
-- name: white-house-lawn-white-house-window-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-attack-planes.jpg
-- name: curtain-curtain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-post-modern.jpg
-- name: razorwire-DSC-0080-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-constitution.jpg
-- name: razorwire-DSC-0080-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-paper.jpg
-- name: beach-rocks-beach-rocks-currents-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dry-skin.jpg
-- name: gypsymosaic-gypsy-eyes-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-plentiful.jpg
-- name: walled-garden-walled-garden-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
-- name: miamibeach-miamibeach-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-marcel-duchamp.jpg
-- name: server-cloud-server-racks-clouds-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kandinsky-bv.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-far-away.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-far-away.JPG
-- name: server-cloud-server-racks-door-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-really-hot.jpg
-- name: aws-s3-stories-adam-smith-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-blue-circuit-5.jpg
-- name: meadowbutterfly-meadow-butterfly-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-collage.jpg
-- name: berlinwall2-berlinwall-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gred-mash.jpg
-- name: rockingchair-rockingchair-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
-- name: server-cloud-server-racks-clouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dry-skin.jpg
-- name: liberty-back-statue-liberty-back-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-bright-sand.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-- name: oldhousecars-house-old-cars-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
-- name: bluelake-colorful-blocks-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-38-67.jpg
-- name: containership-containership-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gan-vogh.jpg
-- name: scream-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8486.jpg
-- name: capital-battle-capitolbattle-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-two.jpg
-- name: gypsy-wagon-gypsywagon-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-constitution.jpg
-- name: locked-up-steam-lock-up-steam-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-internet-numbers.jpg
-- name: oldhouse-oldhouse-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-pablo-blue.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-wav-pr.jpg
-- name: curtain-curtain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain.jpg
-- name: rockingchair-rockingchair-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colorful-dream.jpg
-- name: server-cloud-server-racks-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-feed-people.jpg
-- name: catacombs-catacombs-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purple-pond.jpg
-- name: docks-docks-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-soul.jpg
-- name: birdhouse-birdhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-oily-mcoilface.jpg
-- name: supreme-court-supremecourt-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-hot-spicy.jpg
-- name: server-cloud-server-racks-door-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-marcel-duchamp.jpg
-- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
-- name: ellis-island-ellisisland-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purple-storm.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-- name: sand-hand-sand-hand-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
+- name: birdhouse-birdhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-granite.jpg
+- name: status-berlin-status-berlin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
+- name: locked-up-steam-lock-up-steam-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-ww2-dresden.jpg
+- name: rain-princess-IMG_8318.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8318.jpg
+- name: border-fence-border-fence-on-hill-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crafty-painting.jpg
+- name: nyc-flag-nycflag-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-wols.jpg
+- name: oldcabin-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
+- name: oldtrain-oldtrain-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
+- name: liberty-back-statue-liberty-back-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-diego-rivera1.jpg
+- name: old-school-house-old-schoolhouse-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit-2.jpg
+- name: berlinwall2-berlinwall-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
 ---
 Dont Miss These Concerts.&nbsp;Lance Armstrong Brings Back Tour De France Podcast For Third Year With New Location.&nbsp;Labor Secretary Acosta Resigning Amid Epstein Deal Scrutiny.&nbsp;Too High A Price.&nbsp;Indians' Carrasco Not Slowing Down As He Fights Leukemia.&nbsp;Orioles Ask Court To Refuse Arbitration Decision With Nats.&nbsp;Fishing Team Advances To National Tournament.&nbsp;Save The Pavement! Tompkins Skaters Fight Turf Plan.&nbsp;
